# ElusiveImages

./: .gitignore  README.md  Siamese_experiments.ipynb  collab_requirements.txt  environment.yml  experiments.ipynb  pyproject.toml  requirements.txt  test.ipynb  train.py
MLPMixer/: README.md
MLPMixer/models/: configs.py  modeling.py
config/: MLPMixer.yaml  SiameseNetwork.yaml  SimpleNetwork.yaml  ViT.yaml  ViT_dogs.yaml
database/: BaseDatabase.py  __init__.py
dataset/: ContrastiveData.py  QuadrupletData.py  SiameseData.py  TripletData.py  __init__.py
loss/: ContrastiveLoss.py  QuadrupletLoss.py  TripletLoss.py  __init__.py
models/: SiameseNet.py  __init__.py
pipelines/: BasePipeline.py
scripts/: dogs_12066_accuracy.txt  get_data.sh  organize_data.py  organize_dog_breede_data.py
utils/: MAP.py  __init__.py
