[tool.poetry]
name = "elusiveimages"
version = "0.1.0"
description = ""
authors = ["Matthew Caseres <matthewcaseres@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
PyYAML = "^6.0"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
ipykernel = "^6.11.0"
faiss-cpu = "^1.7.2"
torch = "^1.11.0"
Pillow = "^9.1.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
