[tool.poetry]
name = "elusiveimages"
version = "0.1.0"
description = ""
authors = ["Matthew Caseres <matthewcaseres@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ipykernel = "^6.12.1"
torch = "1.9.0"
faiss-cpu = "1.7.2"
scipy = "^1.8.0"
pandas = "^1.4.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
